--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "lucide-react": "^0.511.0",
     "motion": "^12.23.12",
     "next": "15.3.2",
